--- a/index.htm
+++ b/index.htm
@@ -704,7 +704,7 @@
 															<div class="res-line"></div>
 															<ul class="res-list">
 																<li>
-																	тут напиши доп образование <p class="separator">New York
+																	тут напиши доп образование <p class="separator">
 																		тут напиши что работала раньше в школе учителем музыки</p>
 																</li>
 																<li>
